# boiling-learning

./: .bumpversion.cfg  .gitignore  .pdm.toml  .pre-commit-config.yaml  .pylintrc  .sourcery.yaml  .tool-versions  CHANGELOG.md  MANIFEST.in  Makefile  README.md  TODO.md  conda.yml  downscale_analysis.py  experiment_settings.json  main.py  notes.md  pyproject.toml  requirements-colab.txt  requirements-dev.txt  requirements-scripts.txt  requirements.txt  run_experiment.py  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  internal_improvement.md
.github/actions/: setup-python-environment.yaml
.github/actions/setup-python-environment/: action.yaml
.github/workflows/: automerge.yaml  ci.yaml  isort.yaml  isort.yml  label-merge-conflicts.yaml  pre-commit-auto-update.yaml  release.yaml  release.yml  update-dependencies-official.yaml  update-dependencies.yaml  update-dependencies2.yaml
Experimental Set Calibration/Calibration/: Calibration.vi
Experimental Set Calibration/Processing/: calibrate.asv  calibrate.m  calibrate.py  stringTable2numericMatrix.m
Python Learning/: Device.py  README.md  VariableHistory.py  downscale_analysis.py  experiment_list.json  main.py  my_csv.csv  process_data.py  reading.py  run_experiment.py  step_detect.py  test.py  test_linear_regression.py  testing.py  training.py
Python Learning/archive/: FileManager.py  LivePlotter.py  composition.py  correct_files.py  correct_files2.py  ml_final_project.py  model_creator.py  remove_BestValidation_epoch.py  testing_extract.py  testing_transform.py  thermocouple_calculations.py  train_test_split.py  using_mirror.py
Python Learning/boiling_learning/: __init__.py
Python Learning/boiling_learning/daq/: Channel.py  Device.py  __init__.py
Python Learning/daq/: Channel.py  __init__.py
Python Learning/image_generators/: steady_state.py
Python Learning/management/: Mirror.py  ModelCreator.py  ModelManager.py  __init__.py
Python Learning/model/: __init__.py  callbacks.py  model.py
Python Learning/model_definitions/: HoboldNet1.py  HoboldNet2.py  HoboldNet3.py  HoboldNetSupplementary.py  KramerNet.py  LinearRegression.py  __init__.py
Python Learning/notes/: surface_roughness.txt
Python Learning/sandbox/: code_golf.py  flow_from_directory.py  mirror.py  sandbox.py  utils_image.py
Python Learning/scripts/: user_pool.json
Python Learning/test/: daq_test.py  unit_test.py  unit_tests.py
Python Learning/utils/: __init__.py  filters.py  folded_functional.py  image.py  utils.py  video.py
archive/: FileManager.py  LivePlotter.py  VariableHistory.py  correct_files.py  correct_files2.py  filters.py  mirror.py  ml_final_project.py  model_creator.py  remove_BestValidation_epoch.py  testing_extract.py  testing_transform.py  thermocouple_calculations.py  train_test_split.py  using_mirror.py  worker_distributor.py  worker_distributor_server_client.py  worker_dynamic_userpool.py  worker_userpool.py
boiling_learning/: __init__.py  __main__.py  dataclasses.py  descriptions.py  distribute.py  image_datasets.py  lazy.py  transforms.py
boiling_learning/app/: cancellation.py  configuration.py  constants.py  options.py  paths.py
boiling_learning/automl/: blocks.py  hypermodels.py  tuners.py  tuning.py
boiling_learning/daq/: Channel.py  Device.py  __init__.py  channels.py  devices.py
boiling_learning/data/: boiling_curve.py  samples.py
boiling_learning/datasets/: __init__.py  bridging.py  cache.py  creators.py  datasets.py  hdf5_cache.py  metrics.py  sliceable.py  splits.py
boiling_learning/describe/: described.py
boiling_learning/io/: __init__.py  dataclasses.py  io.py  json.py  json_encoders.py  storage.py
boiling_learning/management/: Lazy.py  Manager.py  Mirror.py  Persistent.py  __init__.py  allocators.py  cacher.py  descriptors.py  lazy.py  managers.py  persister.py  pipelines.py
boiling_learning/model/: __init__.py  automl.py  callbacks.py  definitions.py  evaluate.py  evaluation.py  layers.py  metrics.py  model.py  training.py
boiling_learning/preprocessing/: Case.py  ExperimentVideo.py  ExperimentalData.py  ImageDataset.py  Video.py  __init__.py  arrays.py  case_data.py  cases.py  experiment_video.py  experiment_video_dataset.py  experimental_data.py  extract.py  hdf5.py  image.py  image_datasets.py  numpy.py  preprocessing.py  transformers.py  video.py  visualize.py
boiling_learning/scripts/: analyze_consecutive_frames.py  analyze_downsampling.py  connect_gpus.py  downscale_analysis.py  interact_frames.py  load_cases.py  load_dataset_tree.py  make_boiling_processors.py  make_condensation_processors.py  make_dataset.py  make_model.py  plot_steady_state.py  rgb_to_gray_example.py  run_experiment.py  set_boiling_cases_data.py  set_condensation_datasets_data.py
boiling_learning/utils/: FrozenDict.py  Parameters.py  __init__.py  collections.py  dataclasses.py  described.py  descriptions.py  descriptors.py  dtypes.py  filters.py  frozendict.py  frozendicts.py  functional.py  geometry.py  iterutils.py  lazy.py  mathutils.py  parameters.py  pathutils.py  printing.py  random.py  sentinels.py  slicerators.py  table_dispatch.py  timing.py  typeutils.py  units.py  utils.py  worker.py
boiling_learning/visualization/: training.py  video.py
image_generators/: steady_state.py
sandbox/: sandbox.py
scripts/: adapt_increment.sh  autoformat.sh  autorelease.sh  commit.sh  coverage.sh  format.sh  init.sh  lint.sh  release.sh  test-cov.sh  test.sh  typecheck.sh  vulture.sh
tests/: test_daq.py  test_dataclasses.py  test_datasets.py  test_descriptions.py  test_io.py  test_io_.py  test_lazy.py  test_management.py  test_transforms.py  test_utils.py  test_utils_.py
tests/test_datasets/: test_bridging.py  test_datasets.py  test_sliceable.py
tests/test_io/: test_json.py
tests/test_preprocessing/: test_video.py
tests/test_utils/: test_dataclasses.py  test_described.py  test_descriptions.py  test_iterutils.py  test_lazy.py  test_table_dispatch.py
typings/funcy/: __init__.pyi
typings/slicerator/: __init__.pyi
(+182 files in other folders)
