[project]
name = "boiling-learning"
version = "0.34.10"
description = "Deep learning models for phase-change quantification and classification."
authors = [
    {name = "Ruan Comelli", email = "ruancomelli@gmail.com"}
]
dependencies = [
    "frozendict>=2.2.0",
    "funcy<2.0,>=1.17",
    "more-itertools>=8.11.0",
    "nidaqmx<1.0.0,>=0.5.7",
    "numpy<1.22.0,>=1.19.5",
    "parse<2.0.0,>=1.19.0",
    "Pint<1.0,>=0.18",
    "scikit-image<1.0.0,>=0.19.1",
    "tinydb<5.0.0,>=4.5.2",
    "typing-extensions>=4.3.0",
    "tensorflow<2.9.0,>=2.8.0",
    "classes<1.0.0,>=0.4.0",
    "tinydb-smartcache<3.0.0,>=2.0.0",
    "iteround<2.0.0,>=1.0.3",
    "pyqtgraph==0.12.3",
    "PyQt6<7.0.0,>=6.2.2",
    "modin[all]>=0.12.1",
    "loguru>=0.6.0",
    "decord==0.6.0",
    "keras-tuner>=1.1.2",
    "autokeras>=1.0.19",
    "matplotlib>=3.0.0",
    "seaborn>=0.11.0",
]

requires-python = ">=3.7.12,<3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["python", "machine-learning", "deep-learning", "tensorflow", "phase-change"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
homepage = ""
"Bug Tracker" = "https://github.com/ruancomelli/boiling-learning/issues"
repository = "https://github.com/ruancomelli/boiling-learning"
documentation = "https://github.com/ruancomelli/boiling_learning/blob/main/README.md"

[project.optional-dependencies]
scripts = [
    "tensorflow-addons>=0.17.1",
]

[project.entry-points.tox]
pdm = "tox_pdm.plugin"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "coverage>=6.4.3",
    "tox>=3.25.1",
    "tox-asdf>=0.1.0",
    "tox-gh-actions>=2.9.1",
    "tox-pdm>=0.6.0",
]
lint = [
    "black>=22.6.0",
    "flake8>=3.9.2",
    "isort[requirements_deprecated_finder]>=5.10.1",
    "unimport>=0.11.1",
    "pylint>=2.14.5",
    "vulture>=2.5",
    "sourcery-cli>=0.12.6",
]
ci = [
    "commitizen>=2.29.5",
    "pre-commit>=2.20.0",
]
build = [
    "pip>=22.2.2",
    "wheel>=0.37.1",
    "setuptools>=63.4.2",
]
types = [
    "mypy>=0.971",
    "types-decorator>=5.1.8",
    "types-PyYAML>=6.0.11",
    "funcy-stubs>=0.1.1",
]

[tool.isort]
profile = "black"
known_first_party = ["boiling_learning"]
multi_line_output = 3
line_length = 99
float_to_top = true
remove_redundant_aliases = true

[tool.unimport]
gitignore = true
ignore_init = true
include_star_import = true
remove = true
requirements = true

[tool.black]
include = '\.py|\.pyi|\.ipynb$'
line-length = 99
skip-string-normalization = true
target-version = ['py37']

[tool.mypy]
follow_imports = "normal"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = [
    "classes.contrib.mypy.classes_plugin",
	"numpy.typing.mypy_plugin",
	"tinydb.mypy_plugin",
]

[tool.commitizen]
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version = "0.34.10"
version_files = ["pyproject.toml:version"]
